made corrections